--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "slim/slim": "4.*",
         "vlucas/phpdotenv": "^5.6",
         "doctrine/migrations": "^3.9",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "firebase/php-jwt": "^7.0"
     }
 }
